WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199381
Pipe suport for 'cenc' init data type into CDMFairPlayStreaming
https://bugs.webkit.org/show_bug.cgi?id=199381
Summary
Pipe suport for 'cenc' init data type into CDMFairPlayStreaming
Jer Noble
Reported
2019-07-01 14:25:33 PDT
Pipe suport for 'cenc' init data type into CDMFairPlayStreaming
Attachments
Patch
(17.94 KB, patch)
2019-07-01 14:36 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(18.08 KB, patch)
2019-07-02 07:57 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(18.08 KB, patch)
2019-07-02 08:31 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(19.39 KB, patch)
2019-07-02 09:11 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-07-01 14:31:43 PDT
<
rdar://problem/52483103
>
Jer Noble
Comment 2
2019-07-01 14:36:08 PDT
Created
attachment 373268
[details]
Patch
EWS Watchlist
Comment 3
2019-07-01 14:37:54 PDT
Attachment 373268
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/graphics/avfoundation/ISOFairPlayStreamingPsshBox.h:111: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 4
2019-07-01 17:42:21 PDT
Comment on
attachment 373268
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=373268&action=review
> Source/WebCore/platform/graphics/avfoundation/ISOFairPlayStreamingPsshBox.h:111 > + static FourCC boxTypeName() { return "fpsdq"; }
A five character FourCC?
Jer Noble
Comment 5
2019-07-02 07:55:36 PDT
(In reply to Eric Carlson from
comment #4
)
> Comment on
attachment 373268
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=373268&action=review
> > > Source/WebCore/platform/graphics/avfoundation/ISOFairPlayStreamingPsshBox.h:111 > > + static FourCC boxTypeName() { return "fpsdq"; } > > A five character FourCC?
Gah, I must have hit 'q' and saved it. In good news tho: /Volumes/Data/EWS/WebKit/Source/WebCore/platform/graphics/FourCC.h:39:9: error: static_assert failed "FourCC literals must be exactly 4 characters long" Looks like FourCC's static checker is working great!
Jer Noble
Comment 6
2019-07-02 07:57:45 PDT
Created
attachment 373321
[details]
Patch for landing
EWS Watchlist
Comment 7
2019-07-02 07:59:18 PDT
Attachment 373321
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/graphics/avfoundation/ISOFairPlayStreamingPsshBox.h:111: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jer Noble
Comment 8
2019-07-02 08:31:31 PDT
Created
attachment 373324
[details]
Patch for landing
EWS Watchlist
Comment 9
2019-07-02 08:33:37 PDT
Attachment 373324
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/graphics/avfoundation/ISOFairPlayStreamingPsshBox.h:111: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jer Noble
Comment 10
2019-07-02 09:11:47 PDT
Created
attachment 373330
[details]
Patch for landing
EWS Watchlist
Comment 11
2019-07-02 09:15:09 PDT
Attachment 373330
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/graphics/avfoundation/ISOFairPlayStreamingPsshBox.h:111: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jer Noble
Comment 12
2019-07-02 10:30:21 PDT
gtk-wk2 and wpe bots are both stuck in "unable to build without patch". Landing anyway.
WebKit Commit Bot
Comment 13
2019-07-02 11:00:52 PDT
Comment on
attachment 373330
[details]
Patch for landing Clearing flags on attachment: 373330 Committed
r247059
: <
https://trac.webkit.org/changeset/247059
>
WebKit Commit Bot
Comment 14
2019-07-02 11:00:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug